--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "pixi.js": "^6.3.0",
     "portfinder-sync": "0.0.2",
     "raw-loader": "^4.0.2",
+    "smooth-scrollbar": "^8.7.4",
     "spectorjs": "^0.9.27",
     "style-loader": "^3.3.1",
     "three": "^0.137.5",
